syntax = "proto3";

package pb;

import "fav_movies.proto";

option go_package = "github.com/CineDeepMatch/Backend-server/pb";

message CreateFavMoviesRequest {
    string user_id = 1;
    repeated string movie_ids = 2;
}

message CreateFavMoviesResponse {
    FavMovies fav_movies = 1;
}

